--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- Bootstrap css -->
     <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
-    
+
     <link href="lib/bootstrap/css/style.min.css" rel="stylesheet">
 
     <!-- Libraries CSS Files -->
@@ -114,40 +114,41 @@
                                 <li><a href="elements.html">Partners</a></li>
                                 <li><a href="chardigarh.html">Chandigarh University</a></li>
                                 <li><a href="Paruluniversity.html">Parul University</a></li>
-                                <li><a href="#">CT University</a></li>
-                                <li><a href="#">Shoolin University</a></li>
-                                <li><a href="#">Jain University</a></li>
-                                <li><a href="#">Royal Global University</a></li>
-                                <li><a href="#">Symboisis University</a></li>
-                                <li><a href="#">Galgocia University</a></li>
-                                <li><a href="#">Noida University</a></li>
-                                <li><a href="#">Khalsa College</a></li>
-                                <li><a href="#">Lovey Professional University</a></li>
+                                <li><a href="Paruluniversity.html">CT University</a></li>
+                                <li><a href="Paruluniversity.html">Shoolin University</a></li>
+                                <li><a href="Paruluniversity.html">Jain University</a></li>
+                                <li><a href="Paruluniversity.html">Royal Global University</a></li>
+                                <li><a href="Paruluniversity.html">Symboisis University</a></li>
+                                <li><a href="Paruluniversity.html">Galgocia University</a></li>
+                                <li><a href="Paruluniversity.html">Noida University</a></li>
+                                <li><a href="Paruluniversity.html">Khalsa College</a></li>
+                                <li><a hrefParuluniversity.htmlLovey Professional University</a></li>
                                 <li class="has-children">
                                     <a href="#">GEDU GLOBAL</a>
                                     <ul class="dropdown">
-                                        <li><a href="#">GBS Dubai</a></li>
-                                        <li><a href="#">St Julians</a></li>
-                                        <li><a href="#">Plymouth, MLA College</a></li>
-                                        <li><a href="#">Schiller International University</a></li>
-                                        <li><a href="#">Ecole de Management EMA</a></li>
-                                        <li><a href="#">Austrtian Perfoming Arts Conservatory</a></li>
-                                        <li><a href="#">Cyprus International University</a></li>
-                                        <li><a href="#">Cyprus West University</a></li>
+                                        <li><a href="Paruluniversity.html">GBS Dubai</a></li>
+                                        <li><a href="Paruluniversity.html">St Julians</a></li>
+                                        <li><a href="Paruluniversity.html">Plymouth, MLA College</a></li>
+                                        <li><a href="Paruluniversity.html">Schiller International University</a></li>
+                                        <li><a href="Paruluniversity.html">Ecole de Management EMA</a></li>
+                                        <li><a href="Paruluniversity.html">Austrtian Perfoming Arts Conservatory</a>
+                                        </li>
+                                        <li><a href="Paruluniversity.html">Cyprus International University</a></li>
+                                        <li><a href="Paruluniversity.html">Cyprus West University</a></li>
                                     </ul>
                                 </li>
                                 <li class="has-children">
                                     <a href="#">MSM UNIFY</a>
                                     <ul class="dropdown">
-                                        <li><a href="#">University of Niagara Faals</a></li>
-                                        <li><a href="#">University of Victoria</a></li>
-                                        <li><a href="#">Kwantlen</a></li>
-                                        <li><a href="#">University of Wolverhampton</a></li>
-                                        <li><a href="#">Webster University</a></li>
-                                        <li><a href="#">Dublin College</a></li>
-                                        <li><a href="#">Seatle Central College</a></li>
-                                        <li><a href="#">Thompson Rivers University</a></li>
-                                        <li><a href="#">University of Greenwish</a></li>
+                                        <li><a href="Paruluniversity.html">University of Niagara Faals</a></li>
+                                        <li><a href="Paruluniversity.html">University of Victoria</a></li>
+                                        <li><a href="Paruluniversity.html">Kwantlen</a></li>
+                                        <li><a href="Paruluniversity.html">University of Wolverhampton</a></li>
+                                        <li><a href="Paruluniversity.html">Webster University</a></li>
+                                        <li><a href="Paruluniversity.html">Dublin College</a></li>
+                                        <li><a href="Paruluniversity.html">Seatle Central College</a></li>
+                                        <li><a href="Paruluniversity.html">Thompson Rivers University</a></li>
+                                        <li><a href="Paruluniversity.html">University of Greenwish</a></li>
                                     </ul>
                                 </li>
 
@@ -184,7 +185,7 @@
                     <h1 class="display-4 fw-bold">Empowering Dreams. Building Global Futures.</h1>
                     <p class="lead mb-4">We connect Malawian students with top international universities through expert
                         guidance and personalized support.</p>
-                    <a href="#contact" id="openFormBtn"  class="btn btn-primary me-3">Apply Now</a>
+                    <a href="#contact" id="openFormBtn" class="btn btn-primary me-3">Apply Now</a>
                     <button type="button" class="btn btn-outline-light" data-bs-toggle="modal"
                         data-bs-target="#videoModal">
                         ▶ Watch Video
@@ -385,7 +386,8 @@
                         <li>🚀 Empowering communities</li>
                     </ul>
 
-                    <p data-aos="fade-up" id="openFormBtn" data-aos-delay="300"><a href="#" class="btn btn-primary">Get Started</a></p>
+                    <p data-aos="fade-up" id="openFormBtn" data-aos-delay="300"><a href="#" class="btn btn-primary">Get
+                            Started</a></p>
 
                 </div>
                 <div class="col-lg-6" data-aos="fade-up" data-aos-delay="0">
@@ -681,15 +683,36 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-lg-5 mb-5">
-                    <h2 class="line-bottom mb-4" data-aos="fade-up" data-aos-delay="0">About Us</h2>
-                    <p data-aos="fade-up" data-aos-delay="100">Far far away, behind the word mountains, far from the
-                        countries Vokalia and Consonantia, there live the blind texts. Separated they live in
-                        Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                    <ul class="list-unstyled ul-check mb-5 primary" data-aos="fade-up" data-aos-delay="200">
-                        <li>Separated they live</li>
-                        <li>Bookmarksgrove right at the coast</li>
-                        <li>large language ocean</li>
-                    </ul>
+                    <h2 class="section-title mb-4" data-aos="fade-up">About Mtendere Education Consult</h2>
+                    <p class="lead text-muted" data-aos="fade-up" data-aos-delay="100">
+                        We are a registered organization under the <strong>Malawi Government Business Registration Act
+                            (No 12 of 2012)</strong>, with a strong passion for education and a mission to connect
+                        aspiring students with prestigious international universities and colleges.
+                    </p>
+                    <div class="row">
+                        <div class="col-lg-6" data-aos="fade-left">
+                            <div class="ps-lg-4">
+                                <h3 class="mb-3">Our Vision & Commitment</h3>
+                                <p>At Mtendere Education Consult, we understand the life-changing power of education. We
+                                    are dedicated to offering comprehensive support for students pursuing higher
+                                    education — from application assistance to personalized guidance.</p>
+                                <ul class="list-unstyled mt-4">
+                                    <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Strong
+                                        partnerships with top global universities and colleges</li>
+                                    <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Expert advice
+                                        from experienced professionals in international education</li>
+                                    <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Commitment to
+                                        integrity, transparency, and professionalism</li>
+                                    <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Clear and
+                                        up-to-date information for students and families</li>
+                                </ul>
+                                <p class="mt-4">We prioritize our students' goals and challenges, especially those faced
+                                    by international applicants. Our focus is to ensure their journey to studying abroad
+                                    is smooth, rewarding, and secure.</p>
+                                <a href="#apply" class="btn btn-primary mt-3">Apply Now</a>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="row count-numbers mb-5">
                         <div class="col-4 col-lg-4" data-aos="fade-up" data-aos-delay="0">
