--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 
                     <div class="col-6 col-lg-9">
                         <a class="small mr-3"><span class="icon-question-circle-o mr-2"></span>
-                            <span id="faqBtn" d-none d-lg-inline-block">Have a questions?</span></a <a href="#"
+                            <span id="faqBtn" class="d-lg-inline-block">Have a questions?</span></a>
+                        <a href="#"
                             class="small mr-3"><span class="icon-phone mr-2"></span> <span
                             class="d-none d-lg-inline-block">
 
@@ -161,7 +162,7 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
 
-                    <a href="#" class="btn-book btn btn-secondary btn-sm menu-absolute">Enroll Now</a>
+                    <a id="openFormBtn" class="btn-book btn btn-secondary btn-sm menu-absolute">Enroll Now</a>
 
                     <a href="#"
                         class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light"
@@ -185,7 +186,7 @@
                     <h1 class="display-4 fw-bold">Empowering Dreams. Building Global Futures.</h1>
                     <p class="lead mb-4">We connect Malawian students with top international universities through expert
                         guidance and personalized support.</p>
-                    <a href="#contact" id="openFormBtn" class="btn btn-primary me-3">Apply Now</a>
+                    <a id="openFormBtn" class="btn btn-primary me-3">Apply Now</a>
                     <button type="button" class="btn btn-outline-light" data-bs-toggle="modal"
                         data-bs-target="#videoModal">
                         ▶ Watch Video
@@ -200,7 +201,7 @@
                     <h1 class="display-5 fw-bold">Scholarships & Visa Support</h1>
                     <p class="lead mb-4">From choosing the right program to securing funding, Mtendere Education Consult
                         is with you every step of the way.</p>
-                    <a href="#services" id="openFormBtn" class="btn btn-primary me-3">Explore Services</a>
+                    <a href="#services" class="btn btn-primary me-3">Explore Services</a>
                 </div>
             </div>
 
