--- a/index.html
+++ b/index.html
@@ -152,7 +152,6 @@
                                         <li><a href="Paruluniversity.html">University of Greenwish</a></li>
                                     </ul>
                                 </li>
-
                             </ul>
                         </li>
                         <li><a href="team.html">Our Staff</a></li>
@@ -161,15 +160,12 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
-
                     <a id="openFormBtn" class="btn-book btn btn-secondary btn-sm menu-absolute">Enroll Now</a>
-
                     <a href="#"
                         class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light"
                         data-toggle="collapse" data-target="#main-navbar">
                         <span></span>
                     </a>
-
                 </div>
             </div>
         </div>
@@ -1271,7 +1267,7 @@
     <button id="backToTop" title="Back to top">↑</button>
 
     <!-- Chatbot Integration (Placeholder) -->
-    <div class="chatbot-icon">
+    <div id="backToTop" class="chatbot-icon">
         <button class="btn btn-info" id="chatbot-btn">
             <i class="fas fa-comments"></i> Chat with us!
         </button>
