--- a/gallery.html
+++ b/gallery.html
@@ -18,6 +18,33 @@
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="images/favicon.png">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/2.3.4/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/2.3.4/owl.theme.default.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/2.3.4/owl.carousel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.3/wow.min.js"></script>
+
+    <!-- Bootstrap css -->
+    <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
+
+    <link href="lib/bootstrap/css/style.min.css" rel="stylesheet">
+
+    <!-- Libraries CSS Files -->
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.theme.default.min.css" rel="stylesheet">
+    <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="lib/modal-video/css/modal-video.min.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -36,14 +63,24 @@
                 <div class="row align-items-center">
 
                     <div class="col-6 col-lg-9">
-                        <a href="#faq-popup" id="" class="small mr-3"><span class="icon-question-circle-o mr-2"></span> <span
-                            class="d-none d-lg-inline-block">Have a questions?</span></a
+                        <a class="small mr-3"><span class="icon-question-circle-o mr-2"></span>
+                            <span id="faqBtn" class="d-lg-inline-block">Have a questions?</span></a>
                         <a href="#" class="small mr-3"><span class="icon-phone mr-2"></span> <span
                                 class="d-none d-lg-inline-block">
 
                             </span></a>
                         <a href="#" class="small mr-3"><span class="icon-envelope mr-2"></span> <span
                                 class="d-none d-lg-inline-block">mtendereeducationconsult@gmail.com</span></a>
+                    </div>
+
+                    <!-- Language Selector -->
+                    <div class="col-6 text-center">
+                        <select class="form-select small mr-3"" id=" language-select">
+                            <option value="en">English</option>
+                            <option value="es">Español</option>
+                            <option value="fr">Français</option>
+                            <!-- Add more languages here -->
+                        </select>
                     </div>
 
                     <div class="col-6 col-lg-3 text-right">
@@ -74,46 +111,46 @@
                         <li class="has-children">
                             <a href="#">Universities</a>
                             <ul class="dropdown">
-                                <li><a href="#">Partners</a></li>
+                                <li><a href="elements.html">Partners</a></li>
                                 <li><a href="chardigarh.html">Chandigarh University</a></li>
-                                <li><a href="#">Parul University</a></li>
-                                <li><a href="#">CT University</a></li>
-                                <li><a href="#">Shoolin University</a></li>
-                                <li><a href="#">Jain University</a></li>
-                                <li><a href="#">Royal Global University</a></li>
-                                <li><a href="#">Symboisis University</a></li>
-                                <li><a href="#">Galgocia University</a></li>
-                                <li><a href="#">Noida University</a></li>
-                                <li><a href="#">Khalsa College</a></li>
-                                <li><a href="#">Lovey Professional University</a></li>
+                                <li><a href="Paruluniversity.html">Parul University</a></li>
+                                <li><a href="Paruluniversity.html">CT University</a></li>
+                                <li><a href="Paruluniversity.html">Shoolin University</a></li>
+                                <li><a href="Paruluniversity.html">Jain University</a></li>
+                                <li><a href="Paruluniversity.html">Royal Global University</a></li>
+                                <li><a href="Paruluniversity.html">Symboisis University</a></li>
+                                <li><a href="Paruluniversity.html">Galgocia University</a></li>
+                                <li><a href="Paruluniversity.html">Noida University</a></li>
+                                <li><a href="Paruluniversity.html">Khalsa College</a></li>
+                                <li><a hrefParuluniversity.htmlLovey Professional University</a></li>
                                 <li class="has-children">
                                     <a href="#">GEDU GLOBAL</a>
                                     <ul class="dropdown">
-                                        <li><a href="#">GBS Dubai</a></li>
-                                        <li><a href="#">St Julians</a></li>
-                                        <li><a href="#">Plymouth, MLA College</a></li>
-                                        <li><a href="#">Schiller International University</a></li>
-                                        <li><a href="#">Ecole de Management EMA</a></li>
-                                        <li><a href="#">Austrtian Perfoming Arts Conservatory</a></li>
-                                        <li><a href="#">Cyprus International University</a></li>
-                                        <li><a href="#">Cyprus West University</a></li>
+                                        <li><a href="Paruluniversity.html">GBS Dubai</a></li>
+                                        <li><a href="Paruluniversity.html">St Julians</a></li>
+                                        <li><a href="Paruluniversity.html">Plymouth, MLA College</a></li>
+                                        <li><a href="Paruluniversity.html">Schiller International University</a></li>
+                                        <li><a href="Paruluniversity.html">Ecole de Management EMA</a></li>
+                                        <li><a href="Paruluniversity.html">Austrtian Perfoming Arts Conservatory</a>
+                                        </li>
+                                        <li><a href="Paruluniversity.html">Cyprus International University</a></li>
+                                        <li><a href="Paruluniversity.html">Cyprus West University</a></li>
                                     </ul>
                                 </li>
                                 <li class="has-children">
                                     <a href="#">MSM UNIFY</a>
                                     <ul class="dropdown">
-                                        <li><a href="#">University of Niagara Faals</a></li>
-                                        <li><a href="#">University of Victoria</a></li>
-                                        <li><a href="#">Kwantlen</a></li>
-                                        <li><a href="#">University of Wolverhampton</a></li>
-                                        <li><a href="#">Webster University</a></li>
-                                        <li><a href="#">Dublin College</a></li>
-                                        <li><a href="#">Seatle Central College</a></li>
-                                        <li><a href="#">Thompson Rivers University</a></li>
-                                        <li><a href="#">University of Greenwish</a></li>
+                                        <li><a href="Paruluniversity.html">University of Niagara Faals</a></li>
+                                        <li><a href="Paruluniversity.html">University of Victoria</a></li>
+                                        <li><a href="Paruluniversity.html">Kwantlen</a></li>
+                                        <li><a href="Paruluniversity.html">University of Wolverhampton</a></li>
+                                        <li><a href="Paruluniversity.html">Webster University</a></li>
+                                        <li><a href="Paruluniversity.html">Dublin College</a></li>
+                                        <li><a href="Paruluniversity.html">Seatle Central College</a></li>
+                                        <li><a href="Paruluniversity.html">Thompson Rivers University</a></li>
+                                        <li><a href="Paruluniversity.html">University of Greenwish</a></li>
                                     </ul>
                                 </li>
-
                             </ul>
                         </li>
                         <li><a href="team.html">Our Staff</a></li>
@@ -122,70 +159,64 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
-
-                    <a href="#" class="btn-book btn btn-secondary btn-sm menu-absolute">Enroll Now</a>
-
+                    <a id="openFormBtn" class="btn-book btn btn-secondary btn-sm menu-absolute">Enroll Now</a>
                     <a href="#"
                         class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light"
                         data-toggle="collapse" data-target="#main-navbar">
                         <span></span>
                     </a>
-
                 </div>
             </div>
         </div>
     </nav>
 
-
     <!-- Header Start -->
-    <div class="jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="margin-bottom: 90px;">
-        <div class="container text-center py-5">
-            <h1 class="text-white display-1">Courses</h1>
-            <div class="d-inline-flex text-white mb-5">
-                <p class="m-0 text-uppercase"><a class="text-white" href="">Home</a></p>
-                <i class="fa fa-angle-double-right pt-1 px-3"></i>
-                <p class="m-0 text-uppercase">Courses</p>
-            </div>
-            
-        </div>
-    </div>
-    <div class="hero overlay" style="background-image: url('images/img-school-3-min.jpg');">
+    <div class="hero overlay jumbotron jumbotron-fluid page-header position-relative overlay-bottom"
+        style="background-image: url('images/img-school-3-min.jpg');">
         <div class="container">
             <div class="row align-items-center justify-content-center">
-                <div class="col-12">
-                    <div class="row justify-content-center ">
-                        <div class="col-lg-6 text-center ">
-                            <h1 class="mb-4 heading text-white" data-aos="fade-up" data-aos-delay="100"></h1>
-                            <div class="mb-5 text-white desc mx-auto" data-aos="fade-up" data-aos-delay="200">
-                                <p></p>
-                            </div>
-                        </div>
+                <div class="container text-center py-5">
+                    <h1 class="text-white display-1">Courses</h1>
+                    <div class="d-inline-flex text-white mb-5">
+                        <p class="m-0 text-uppercase"><a class="text-white" href="">Home</a></p>
+                        <i class="fa fa-angle-double-right pt-1 px-3"></i>
+                        <p class="m-0 text-uppercase">Courses</p>
                     </div>
                 </div>
                 <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
                     <div class="input-group">
-                        <div class="input-group-prepend">
-                            <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Courses</button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Undergraduate Degree</a>
-                                <a class="dropdown-item" href="#">Post-graduate Degree</a>
-                                <a class="dropdown-item" href="#">Masters Degree</a>
-                                <a class="dropdown-item" href="#">Doctoral Degree</a>
-                                <a class="dropdown-item" href="#">PhD Degree</a>
-                            </div>
-                        </div>
-                        <input type="text" class="form-control border-light" style="padding: 30px 25px;"
-                            placeholder="Keyword">
+                        <select id="courseType" class="btn btn-outline-light bg-white text-body px-4">
+                            <option value="All">All</option>
+                            <option value="Undergraduate Degree">Undergraduate Degree</option>
+                            <option value="Post-graduate Degree">Post-graduate Degree</option>
+                            <option value="Masters Degree">Masters Degree</option>
+                            <option value="Doctoral Degree">Doctoral Degree</option>
+                            <option value="PhD Degree">PhD Degree</option>
+                        </select>
+                        <input type="text" id="keyword" class="form-control border-light" placeholder="Keyword"
+                            style="padding: 30px 25px;">
                         <div class="input-group-append">
-                            <button class="btn btn-secondary px-4 px-lg-5">Search</button>
+                            <button class="btn btn-secondary px-4 px-lg-5" onclick="searchCourses()">Search</button>
                         </div>
                     </div>
                 </div>
-            </div> <!-- /.row -->
-        </div> <!-- /.container -->
+            </div>
 
-    </div> <!-- /.untree_co-hero -->
+            <!-- Results -->
+            <div class="row justify-content-center" id="searchResults">
+                <!-- Results Display -->
+                <section id="search-results" class="py-5 bg-light">
+                    <div class="container">
+                        <h2 class="text-center mb-4">Matching Programs</h2>
+                        <div id="resultsContainer" class="row justify-content-center">
+                            <!-- Results will appear here -->
+
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </div>
     <!-- Header End -->
 
     <!-- Portfolio Start -->
